<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/schedule_color">

    <TextView
        android:id="@+id/text_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:background="@drawable/circle"
        android:text="@string/text_turn"
        android:gravity="center"
        android:textSize="100sp" />

    <!-- Role -->
    <TextView
        android:id="@+id/text_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_turn"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/text_role" 
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_role_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_role"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_toEndOf="@+id/text_role"
        android:layout_toRightOf="@+id/text_role"
        android:text="@string/unknown"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
	
    <!-- Date -->

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_role"
        android:layout_alignStart="@+id/text_role"
        android:layout_below="@+id/text_role"
        android:layout_marginTop="24dp"
        android:text="@string/text_date"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_date_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_date"
        android:layout_alignLeft="@+id/text_role_entry"
        android:layout_alignStart="@+id/text_role_entry"
        android:layout_toEndOf="@+id/text_date"
        android:layout_toRightOf="@+id/text_date"
        android:text="@string/unknown"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <!-- Last Updated -->

    <TextView
        android:id="@+id/text_last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_date"
        android:layout_alignStart="@+id/text_date"
        android:layout_below="@+id/text_date"
        android:layout_marginTop="25dp"
        android:text="@string/text_last_updated"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_last_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_last_updated"
        android:layout_alignLeft="@+id/text_role_entry"
        android:layout_alignStart="@+id/text_role_entry"
        android:layout_toEndOf="@+id/text_last_updated"
        android:layout_toRightOf="@+id/text_last_updated"
        android:text="@string/unknown"
        android:textColor="@color/red"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_last_updated"
        android:layout_alignStart="@+id/text_last_updated"
        android:layout_below="@+id/text_last_updated"
        android:layout_marginTop="25dp"
        android:text="@string/text_notes"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_note_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_note"
        android:layout_alignLeft="@+id/text_role_entry"
        android:layout_alignStart="@+id/text_role_entry"
        android:layout_toEndOf="@+id/text_note"
        android:layout_toRightOf="@+id/text_note"
        android:text="@string/text_note_on"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_edition_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_turn"
        android:layout_alignLeft="@+id/text_turn"
        android:layout_alignRight="@+id/text_turn"
        android:layout_alignStart="@+id/text_turn"
        android:layout_below="@+id/text_turn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_edition_number"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/button_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_edition_number"
        android:layout_toRightOf="@+id/text_turn"
        android:layout_toEndOf="@+id/text_turn"
        android:contentDescription="@string/options"
        android:background="@null"
        android:onClick="showPopup"
        android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />

</RelativeLayout>
