<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/card_view"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="4dp"
	card_view:cardCornerRadius="4dp"
	tools:context=".Activity_Help$ManualAdapter" >

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

		<ImageView
			android:id="@+id/image_card_contacts"
			android:layout_width="120dp"
			android:layout_height="120dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:layout_marginTop="8dp"
			android:contentDescription="@string/image"
			android:cropToPadding="true"
			android:scaleType="center"
			android:src="@drawable/pdf_image_1" />

		<View
			android:id="@+id/baseline"
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/image_card_contacts"
			android:background="?android:attr/listDivider" />

		<TextView
			android:id="@+id/text_contact_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_marginLeft="4dp"
			android:layout_marginStart="4dp"
			android:layout_marginTop="8dp"
			android:layout_toEndOf="@+id/image_card_contacts"
			android:layout_toRightOf="@+id/image_card_contacts"
			android:padding="2dp"
			android:text="@string/unknown"
			android:textSize="14sp" />

		<TextView
			android:id="@+id/text_contact_role"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/text_contact_name"
			android:layout_alignStart="@+id/text_contact_name"
			android:layout_below="@+id/text_contact_name"
			android:layout_marginTop="4dp"
			android:padding="2dp"
			android:text="@string/unknown"
			android:textColor="@color/deeporange_500"
			android:textSize="13sp" />

		<TextView
			android:id="@+id/text_contact_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/text_contact_name"
			android:layout_alignStart="@+id/text_contact_name"
			android:layout_below="@+id/text_contact_role"
			android:layout_marginTop="4dp"
			android:padding="2dp"
			android:text="@string/unknown"
			android:textSize="12sp" />

		<TextView
			android:id="@+id/text_contact_number"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/image_card_contacts"
			android:layout_alignBottom="@+id/image_card_contacts"
			android:layout_alignLeft="@+id/text_contact_name"
			android:layout_alignStart="@+id/text_contact_name"
			android:layout_below="@+id/text_contact_email"
			android:layout_marginBottom="4dp"
			android:layout_marginTop="4dp"
			android:padding="2dp"
			android:text="@string/unknown"
			android:textSize="12sp" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/baseline"
			android:background="@drawable/rectangle"
			android:orientation="horizontal" >

			<ImageButton
				android:id="@+id/btn_contact_call"
				style="?android:buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/btn_call"
				android:src="@drawable/ic_call_white_24dp" />

			<ImageButton
				android:id="@+id/btn_contact_message"
				style="?android:buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp"
				android:contentDescription="@string/btn_message"
				android:src="@drawable/ic_textsms_white_24dp" />

			<ImageButton
				android:id="@+id/btn_contact_email"
				style="?android:buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginStart="10dp"
				android:contentDescription="@string/btn_email"
				android:src="@drawable/ic_email_white_24dp" />

			<ImageButton
				android:id="@+id/btn_contact_options"
				style="?android:buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="35dp"
				android:layout_marginStart="35dp"
				android:contentDescription="@string/options"
				android:gravity="end"
				android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />
		</LinearLayout>
	</RelativeLayout>

</android.support.v7.widget.CardView>