<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp"
    tools:context=".Activity_Help$ManualAdapter" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/image_card"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:scaleType="center"
            android:cropToPadding="true"
            android:contentDescription="@string/image"
            android:src="@drawable/pdf_image_1" />

        <TextView
            android:id="@+id/text_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:layout_below="@+id/image_card"
            android:gravity="center_vertical"
            android:text="@string/unknown"
            android:textSize="16sp" />
        
        <View
            android:id="@+id/baseline"
            android:layout_below="@+id/text_card_title"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"/>

        <Button
            android:id="@+id/btn_card_open"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/baseline"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/deeporange_500"
            android:textSize="14sp"
            android:padding="4dp"
            android:text="@string/btn_open" />

        <Button
            android:id="@+id/btn_card_update"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_card_open"
            android:layout_toEndOf="@+id/btn_card_open"
            android:layout_gravity="end"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_alignBottom="@+id/btn_card_open"
            android:layout_below="@+id/baseline"
            android:textSize="14sp"
            android:padding="4dp"
			android:textColor="@color/teal_500"
            android:text="@string/btn_update" />
        
        <ProgressBar
        	android:id="@+id/progress_card"
        	style="?android:attr/progressBarStyleHorizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/btn_card_update"
        	android:layout_centerHorizontal="true"
        	android:visibility="gone"
        	android:indeterminate="true" />
    </RelativeLayout>

</android.support.v7.widget.CardView>